--- a/index.html
+++ b/index.html
@@ -6,49 +6,47 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ልማት Hub | Ethiopia 2026</title>
 <style>
-body { margin: 0; padding: 0; font-family: sans-serif; background: #f8f9fa; color: #333; }
+body { margin: 0; padding: 0; font-family: sans-serif; background: #f8f9fa; color: #333; line-height: 1.6; }
 nav { background: white; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
 .logo { font-weight: bold; font-size: 1.5rem; color: #003973; }
-.nav-links a { text-decoration: none; color: #333; margin-left: 20px; font-weight: 500; }
-.btn-join { background: #2E7D32; color: white; padding: 8px 15px; border-radius: 5px; text-decoration: none; font-weight: bold; }
-.hero { padding: 60px 5%; text-align: left; background: white; }
-.hero h1 { font-size: 3rem; margin-bottom: 10px; }
-.btn-start { background: #2E7D32; color: white; padding: 12px 25px; border-radius: 5px; text-decoration: none; display: inline-block; margin-top: 20px; }
-.impact-box { background: #FFD700; padding: 40px; border-radius: 15px; text-align: center; margin: 40px 0; }
-.impact-box h2 { font-size: 2.5rem; margin: 0; }
+.btn-join { background: #2E7D32; color: white; padding: 8px 20px; border-radius: 5px; text-decoration: none; font-weight: bold; }
+.hero { padding: 60px 5%; background: white; }
+.hero h1 { font-size: 3.5rem; margin-bottom: 10px; color: #003973; }
+.btn-start { background: #2E7D32; color: white; padding: 12px 25px; border-radius: 5px; text-decoration: none; display: inline-block; margin-top: 20px; font-weight: bold; }
+.content-grid { display: flex; align-items: flex-start; margin-top: 50px; gap: 40px; flex-wrap: wrap; }
+.text-side { flex: 1.5; min-width: 300px; }
+.impact-box { flex: 1; min-width: 300px; background: #FFD700; padding: 60px 20px; border-radius: 15px; text-align: center; box-shadow: 0 10px 20px rgba(0,0,0,0.1); }
+.impact-box h2 { font-size: 3.5rem; margin: 0; color: #003973; }
 .features { display: flex; justify-content: space-around; padding: 50px 5%; flex-wrap: wrap; background: #f1f1f1; }
-.card { background: white; padding: 30px; border-radius: 10px; width: 250px; margin: 15px; box-shadow: 0 4px 6px rgba(0,0,0,0.05); text-align: center; }
+.card { background: white; padding: 30px; border-radius: 10px; width: 280px; margin: 15px; box-shadow: 0 4px 6px rgba(0,0,0,0.05); text-align: center; }
 </style>
 </head>
 <body>
 <nav>
 <div class="logo">ልማት Hub</div>
-<div class="nav-links">
-<a href="#">Home</a>
-<a href="#" class="btn-join">Join Now</a>
-</div>
+<div class="btn-join">Join Now</div>
 </nav>
 <section class="hero">
 <h1>ልማት Hub</h1>
-<p>Empowering Ethiopia's Students for a Global Future</p>
+<p style="font-size: 1.4rem; color: #555;">Empowering Ethiopia's Students for a Global Future</p>
 <a href="#" class="btn-start">Start Learning Now</a>
-<div style="display: flex; align-items: center; margin-top: 50px; gap: 40px; flex-wrap: wrap;">
-<div style="flex: 1; min-width: 300px;">
-<h3 style="color: #2E7D32;">The Problem</h3>
-<p>Ethiopia has millions of talented students, but many lack digital skills for 2026.</p>
-<h3 style="color: #003973;">Our Solution</h3>
-<p>AI-powered learning and National ID verification for global professionals.</p>
+<div class="content-grid">
+<div class="text-side">
+<h3 style="color: #2E7D32; font-size: 1.8rem;">The Problem</h3>
+<p>Despite immense talent, many Ethiopian students face a <strong>major digital skills gap</strong>. Traditional education systems often struggle to keep pace with the rapidly evolving 2026 global remote job market. Without access to specialized AI training and a verified digital identity, our local brilliance remains disconnected from the world's greatest opportunities.</p>
+<h3 style="color: #003973; font-size: 1.8rem; margin-top: 30px;">Our Solution</h3>
+<p><strong>ልማት Hub</strong> creates a powerful bridge. We provide <strong>AI-driven personalized learning paths</strong> designed specifically for international industry demands. By integrating with the <strong>National ID (Fayda)</strong>, we offer a secure, verified platform where students can prove their credentials to global employers, turning local potential into a certified, world-class digital workforce.</p>
 </div>
-<div class="impact-box" style="flex: 1; min-width: 300px;">
+<div class="impact-box">
 <h2>130 Million</h2>
-<p>Potential Lives Impacted</p>
+<p style="font-weight: bold; font-size: 1.2rem;">Potential Lives Impacted</p>
 </div>
 </div>
 </section>
 <section class="features">
-<div class="card"><h3>AI Learning</h3><p>Personalized paths for students.</p></div>
-<div class="card"><h3>Fayda ID</h3><p>Secure National ID integration.</p></div>
-<div class="card"><h3>Global Jobs</h3><p>Direct international remote work.</p></div>
+<div class="card"><h3>AI Learning</h3><p>Curated paths that adapt to your specific speed and goals.</p></div>
+<div class="card"><h3>Fayda ID</h3><p>Verified credentials linked to your National Identity.</p></div>
+<div class="card"><h3>Global Jobs</h3><p>Direct placement support for international remote careers.</p></div>
 </section>
 </body>
 </html>
