Revise content and update feature descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@ nav { background: white; padding: 15px 5%; display: flex; justify-content: space
 <div class="content-grid">
 <div class="text-side">
 <h3 style="color: #2E7D32; font-size: 1.8rem;">The Problem</h3>
-<p>Despite immense talent, many Ethiopian students face a <strong>major digital skills gap</strong>. Traditional education systems often struggle to keep pace with the rapidly evolving 2026 global remote job market. Without access to specialized AI training and a verified digital identity, our local brilliance remains disconnected from the world's greatest opportunities.</p>
+<p>Ethiopian talent is vast, but students often face a <strong>critical disconnect</strong> from the 2026 global economy. Traditional training systems frequently lack access to high-demand AI and digital skills. Furthermore, without a verified professional identity, many students struggle to enter the competitive international remote job market, leaving local potential untapped.</p>
 <h3 style="color: #003973; font-size: 1.8rem; margin-top: 30px;">Our Solution</h3>
-<p><strong>ልማት Hub</strong> creates a powerful bridge. We provide <strong>AI-driven personalized learning paths</strong> designed specifically for international industry demands. By integrating with the <strong>National ID (Fayda)</strong>, we offer a secure, verified platform where students can prove their credentials to global employers, turning local potential into a certified, world-class digital workforce.</p>
+<p><strong>ልማት Hub</strong> acts as a transformative gateway. We offer <strong>customized, AI-powered learning paths</strong> that focus specifically on the skills global companies need right now. By integrating with Ethiopia's <strong>National ID (Fayda)</strong>, we provide a secure way for students to verify their credentials and identity, making it easier than ever to match local expertise with global opportunities.</p>
 </div>
 <div class="impact-box">
 <h2>130 Million</h2>
@@ -44,9 +44,9 @@ nav { background: white; padding: 15px 5%; display: flex; justify-content: space
 </div>
 </section>
 <section class="features">
-<div class="card"><h3>AI Learning</h3><p>Curated paths that adapt to your specific speed and goals.</p></div>
-<div class="card"><h3>Fayda ID</h3><p>Verified credentials linked to your National Identity.</p></div>
-<div class="card"><h3>Global Jobs</h3><p>Direct placement support for international remote careers.</p></div>
+<div class="card"><h3>AI Learning</h3><p>Personalized paths that evolve with your progress.</p></div>
+<div class="card"><h3>Fayda ID</h3><p>Secure, verified credentials for the global market.</p></div>
+<div class="card"><h3>Global Jobs</h3><p>Bridge the gap between your skills and remote careers.</p></div>
 </section>
 </body>
 </html>
