Add signup button to footer with alert message

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ nav { background: white; padding: 15px 5%; display: flex; justify-content: space
 </div>
 </section>
 
-<footer style="padding: 30px; text-align: center; font-size: 0.9rem; color: #888; background: #fff;">
+<button class="signup-btn" onclick="alert('Success! You have been added to the Lemat Hub waitlist.')">Join Waitlist</button>
 &copy; 2026 ልማት Hub. Empowering Ethiopia's Digital Future.
 </footer>
 
