Add contact section and update footer style
Added a contact section with email information and updated footer background color.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ nav { background: white; padding: 15px 5%; display: flex; justify-content: space
 .impact-box { flex: 1; min-width: 300px; background: #FFD700; padding: 60px 20px; border-radius: 15px; text-align: center; box-shadow: 0 10px 20px rgba(0,0,0,0.1); }
 .features { display: flex; justify-content: space-around; padding: 80px 5%; flex-wrap: wrap; background: #f1f1f1; }
 .card { background: white; padding: 30px; border-radius: 10px; width: 280px; margin: 15px; box-shadow: 0 4px 6px rgba(0,0,0,0.05); text-align: center; }
+.contact-section { padding: 80px 5%; background: white; text-align: center; }
 .signup-section { padding: 80px 5%; text-align: center; background: #003973; color: white; }
 .signup-input { padding: 15px; width: 60%; border-radius: 5px 0 0 5px; border: none; }
 .signup-btn { padding: 15px 25px; background: #2E7D32; color: white; border: none; border-radius: 0 5px 5px 0; cursor: pointer; font-weight: bold; }
@@ -32,6 +33,7 @@ nav { background: white; padding: 15px 5%; display: flex; justify-content: space
 <div class="nav-links">
 <a href="#about">About</a>
 <a href="#features">Features</a>
+<a href="#contact">Contact</a>
 <a href="#signup" class="btn-join">Join Now</a>
 </div>
 </nav>
@@ -60,6 +62,12 @@ nav { background: white; padding: 15px 5%; display: flex; justify-content: space
 <div class="card"><h3>Global Jobs</h3><p>Direct international remote work.</p></div>
 </section>
 
+<section class="contact-section" id="contact">
+<h2 style="color: #003973;">Get In Touch</h2>
+<p>Have questions about ልማት Hub? Reach out to us directly.</p>
+<p style="font-weight: bold; font-size: 1.2rem; color: #2E7D32;">Email: support@lemathub.et</p>
+</section>
+
 <section class="signup-section" id="signup">
 <h2>Ready to join the future?</h2>
 <p>Join the waitlist for our 2026 AI Training Program.</p>
@@ -69,7 +77,7 @@ nav { background: white; padding: 15px 5%; display: flex; justify-content: space
 </div>
 </section>
 
-<footer style="padding: 40px; text-align: center; background: white; color: #888;">
+<footer style="padding: 40px; text-align: center; background: #f1f1f1; color: #888;">
 <p>&copy; 2026 ልማት Hub Ethiopia. All Rights Reserved.</p>
 </footer>
 
