--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@ nav { background: white; padding: 15px 5%; display: flex; justify-content: space
 .signup-section { padding: 80px 5%; text-align: center; background: #003973; color: white; }
 .signup-input { padding: 15px; width: 60%; border-radius: 5px 0 0 5px; border: none; }
 .signup-btn { padding: 15px 25px; background: #2E7D32; color: white; border: none; border-radius: 0 5px 5px 0; cursor: pointer; font-weight: bold; }
+footer { padding: 40px 5%; background: #333; color: white; text-align: center; }
+.social-links a { color: white; text-decoration: none; margin: 0 10px; font-weight: bold; font-size: 1.2rem; }
 </style>
 </head>
 <body>
@@ -77,8 +79,11 @@ nav { background: white; padding: 15px 5%; display: flex; justify-content: space
 </div>
 </section>
 
-<footer style="padding: 40px; text-align: center; background: #f1f1f1; color: #888;">
-<p>&copy; 2026 ልማት Hub Ethiopia. All Rights Reserved.</p>
+<footer>
+<div class="social-links">
+<a href="#">LinkedIn</a> | <a href="#">Twitter</a> | <a href="#">Facebook</a>
+</div>
+<p style="margin-top: 20px;">&copy; 2026 ልማት Hub Ethiopia. All Rights Reserved.</p>
 </footer>
 
 </body>
