--- a/index.html
+++ b/index.html
@@ -1,90 +1,94 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ልማት Hub | Ethiopia 2026</title>
-<style>
-* { scroll-behavior: smooth; }
-body { margin: 0; padding: 0; font-family: sans-serif; background: #f8f9fa; color: #333; line-height: 1.6; }
-nav { background: white; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-.logo { font-weight: bold; font-size: 1.5rem; color: #003973; }
-.nav-links a { text-decoration: none; color: #333; margin-left: 20px; font-weight: 500; }
-.btn-join { background: #2E7D32; color: white; padding: 8px 20px; border-radius: 5px; text-decoration: none; font-weight: bold; }
-.hero { padding: 60px 5%; background: white; }
-.hero h1 { font-size: 3.5rem; margin-bottom: 10px; color: #003973; }
-.btn-start { background: #2E7D32; color: white; padding: 12px 25px; border-radius: 5px; text-decoration: none; display: inline-block; margin-top: 20px; font-weight: bold; border:none; cursor:pointer; }
-.content-grid { display: flex; align-items: flex-start; margin-top: 50px; gap: 40px; flex-wrap: wrap; }
-.text-side { flex: 1.5; min-width: 300px; }
-.impact-box { flex: 1; min-width: 300px; background: #FFD700; padding: 60px 20px; border-radius: 15px; text-align: center; box-shadow: 0 10px 20px rgba(0,0,0,0.1); }
-.features { display: flex; justify-content: space-around; padding: 80px 5%; flex-wrap: wrap; background: #f1f1f1; }
-.card { background: white; padding: 30px; border-radius: 10px; width: 280px; margin: 15px; box-shadow: 0 4px 6px rgba(0,0,0,0.05); text-align: center; }
-.contact-section { padding: 80px 5%; background: white; text-align: center; }
-.signup-section { padding: 80px 5%; text-align: center; background: #003973; color: white; }
-.signup-input { padding: 15px; width: 60%; border-radius: 5px 0 0 5px; border: none; }
-.signup-btn { padding: 15px 25px; background: #2E7D32; color: white; border: none; border-radius: 0 5px 5px 0; cursor: pointer; font-weight: bold; }
-footer { padding: 40px 5%; background: #333; color: white; text-align: center; }
-.social-links a { color: white; text-decoration: none; margin: 0 10px; font-weight: bold; font-size: 1.2rem; }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ልማት Hub | Ethiopia 2026</title>
+    <style>
+        * { scroll-behavior: smooth; }
+        body { margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; background: #f8f9fa; color: #333; line-height: 1.6; }
+        nav { background: white; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
+        .logo { font-weight: bold; font-size: 1.5rem; color: #003973; }
+        .nav-links a { text-decoration: none; color: #333; margin-left: 20px; font-weight: 500; }
+        .btn-join { background: #2E7D32; color: white; padding: 8px 20px; border-radius: 5px; text-decoration: none; font-weight: bold; }
+        .hero { padding: 80px 5%; background: white; }
+        .hero h1 { font-size: 3.5rem; margin-bottom: 10px; color: #003973; }
+        .impact-box { background: #FFD700; padding: 40px; border-radius: 15px; text-align: center; margin-top: 30px; box-shadow: 0 10px 20px rgba(0,0,0,0.1); }
+        .mission-section { padding: 80px 5%; background: #003973; color: white; text-align: center; }
+        .features { display: flex; justify-content: space-around; padding: 60px 5%; flex-wrap: wrap; background: #f1f1f1; }
+        .card { background: white; padding: 30px; border-radius: 10px; width: 250px; margin: 10px; text-align: center; box-shadow: 0 4px 6px rgba(0,0,0,0.05); color: #333; }
+        .signup-section { padding: 80px 5%; text-align: center; background: white; }
+        .signup-input { padding: 15px; width: 300px; border: 1px solid #ddd; border-radius: 5px 0 0 5px; font-size: 1rem; }
+        .signup-btn { padding: 15px 25px; background: #2E7D32; color: white; border: none; border-radius: 0 5px 5px 0; cursor: pointer; font-weight: bold; }
+        #success-toast { display: none; background: #2E7D32; color: white; padding: 15px 30px; border-radius: 50px; position: fixed; bottom: 30px; left: 50%; transform: translateX(-50%); z-index: 2000; box-shadow: 0 10px 20px rgba(0,0,0,0.2); font-weight: bold; }
+        footer { padding: 40px; background: #222; color: white; text-align: center; }
+        footer a { color: white; margin: 0 10px; text-decoration: none; font-weight: bold; }
+    </style>
 </head>
 <body>
 
 <nav>
-<div class="logo">ልማት Hub</div>
-<div class="nav-links">
-<a href="#about">About</a>
-<a href="#features">Features</a>
-<a href="#contact">Contact</a>
-<a href="#signup" class="btn-join">Join Now</a>
-</div>
+    <div class="logo">ልማት Hub</div>
+    <div class="nav-links">
+        <a href="#about">About</a>
+        <a href="#features">Features</a>
+        <a href="#mission">Mission</a>
+        <a href="#signup" class="btn-join">Join Now</a>
+    </div>
 </nav>
 
 <section class="hero" id="about">
-<h1>ልማት Hub</h1>
-<p style="font-size: 1.4rem; color: #555;">Empowering Ethiopia's Students for a Global Future</p>
-<button class="btn-start" onclick="location.href='#signup'">Start Learning Now</button>
-<div class="content-grid">
-<div class="text-side">
-<h3 style="color: #2E7D32;">The Problem</h3>
-<p>Ethiopian talent lacks digital skills for the 2026 market.</p>
-<h3 style="color: #003973;">Our Solution</h3>
-<p>AI-powered learning and Fayda ID verification.</p>
-</div>
-<div class="impact-box">
-<h2>130 Million</h2>
-<p>Potential Lives Impacted</p>
-</div>
-</div>
+    <h1>ልማት Hub</h1>
+    <p style="font-size: 1.4rem; color: #555;">Empowering Ethiopia's Students for a Global Future.</p>
+    <div class="impact-box">
+        <h2 style="font-size: 3.5rem; margin: 0; color: #003973;">130 Million</h2>
+        <p style="font-weight: bold;">Potential Lives Impacted</p>
+    </div>
 </section>
 
 <section class="features" id="features">
-<div class="card"><h3>AI Learning</h3><p>Personalized paths for students.</p></div>
-<div class="card"><h3>Fayda ID</h3><p>Secure National ID integration.</p></div>
-<div class="card"><h3>Global Jobs</h3><p>Direct international remote work.</p></div>
+    <div class="card"><h3>AI Learning</h3><p>Personalized paths that evolve with your progress.</p></div>
+    <div class="card"><h3>Fayda ID</h3><p>Verified credentials for the global market.</p></div>
+    <div class="card"><h3>Global Jobs</h3><p>Direct bridge to international remote careers.</p></div>
 </section>
 
-<section class="contact-section" id="contact">
-<h2 style="color: #003973;">Get In Touch</h2>
-<p>Have questions about ልማት Hub? Reach out to us directly.</p>
-<p style="font-weight: bold; font-size: 1.2rem; color: #2E7D32;">Email: support@lemathub.et</p>
+<section class="mission-section" id="mission">
+    <h2>Our Mission</h2>
+    <p style="font-size: 1.2rem; max-width: 800px; margin: 0 auto;">We believe that geographical location should not limit talent. By 2026, ልማት Hub aims to connect every ambitious Ethiopian student to the digital world through AI training and secure identification.</p>
 </section>
 
 <section class="signup-section" id="signup">
-<h2>Ready to join the future?</h2>
-<p>Join the waitlist for our 2026 AI Training Program.</p>
-<div style="margin-top: 30px;">
-<input type="email" placeholder="Enter your email" class="signup-input">
-<button class="signup-btn" onclick="alert('Success! You are on the list.')">Join Waitlist</button>
-</div>
+    <h2 style="color: #003973;">Ready to join the future?</h2>
+    <p>Join the waitlist for our 2026 AI Training Program.</p>
+    <div style="margin-top: 30px;">
+        <input type="email" id="emailInput" placeholder="Enter your email" class="signup-input">
+        <button class="signup-btn" onclick="showSuccess()">Join Waitlist</button>
+    </div>
 </section>
 
 <footer>
-<div class="social-links">
-<a href="#">LinkedIn</a> | <a href="#">Twitter</a> | <a href="#">Facebook</a>
-</div>
-<p style="margin-top: 20px;">&copy; 2026 ልማት Hub Ethiopia. All Rights Reserved.</p>
+    <div style="margin-bottom: 20px;">
+        <a href="#">LinkedIn</a> | <a href="#">Twitter</a> | <a href="#">Facebook</a>
+    </div>
+    <p>&copy; 2026 ልማት Hub Ethiopia. All Rights Reserved.</p>
+    <p style="font-size: 0.9rem; color: #777; margin-top: 10px;">Contact: support@lemathub.et</p>
 </footer>
+
+<div id="success-toast">✓ Success! You are now on the waitlist.</div>
+
+<script>
+    function showSuccess() {
+        const email = document.getElementById('emailInput').value;
+        if(email.includes('@')) {
+            const toast = document.getElementById('success-toast');
+            toast.style.display = 'block';
+            document.getElementById('emailInput').value = '';
+            setTimeout(() => { toast.style.display = 'none'; }, 4000);
+        } else {
+            alert('Please enter a valid email.');
+        }
+    }
+</script>
 
 </body>
 </html>
