--- a/index.html
+++ b/index.html
@@ -1,82 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ልማት Hub | Ethiopia 2026</title>
-    <style>
-        * { scroll-behavior: smooth; }
-        body { margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; background: #f8f9fa; color: #333; line-height: 1.6; }
-        nav { background: white; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-        .logo { font-weight: bold; font-size: 1.5rem; color: #003973; text-decoration: none; }
-        .nav-links a { text-decoration: none; color: #333; margin-left: 20px; font-weight: 500; }
-        .btn-join { background: #2E7D32; color: white !important; padding: 8px 20px; border-radius: 5px; font-weight: bold; }
-        
-        .hero { padding: 80px 5%; background: white; text-align: left; }
-        .hero h1 { font-size: 3.5rem; color: #003973; margin-bottom: 10px; }
-        .btn-start { background: #2E7D32; color: white; padding: 12px 25px; border-radius: 5px; text-decoration: none; font-weight: bold; display: inline-block; margin-top: 20px; }
-
-        .features { display: flex; justify-content: space-around; padding: 60px 5%; flex-wrap: wrap; background: #f1f1f1; }
-        .card { background: white; padding: 30px; border-radius: 10px; width: 280px; margin: 15px; text-align: center; box-shadow: 0 4px 6px rgba(0,0,0,0.05); }
-
-        .testimonials { padding: 60px 5%; text-align: center; background: white; }
-        .testimonial-grid { display: flex; justify-content: center; gap: 20px; flex-wrap: wrap; }
-        .t-card { width: 300px; padding: 20px; font-style: italic; }
-
-        .signup-section { padding: 100px 5%; background: #003973; color: white; text-align: center; }
-        .form-container { max-width: 500px; margin: 0 auto; border: 2px solid #FFD700; padding: 40px; border-radius: 15px; }
-        .signup-input { padding: 15px; width: 90%; border-radius: 5px; border: none; margin-bottom: 15px; font-size: 1rem; }
-        .signup-btn { width: 90%; padding: 15px; background: #FFD700; color: #003973; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; font-size: 1.1rem; }
-
-        footer { padding: 50px 5%; background: #222; color: white; text-align: center; }
-        .social-links a { color: #FFD700; margin: 0 15px; text-decoration: none; font-weight: bold; font-size: 1.1rem; }
-        .social-links a:hover { text-decoration: underline; }
-    </style>
-</head>
-<body>
-
-<nav>
-    <a href="#" class="logo">ልማት Hub</a>
-    <div class="nav-links">
-        <a href="#about">About</a>
-        <a href="#features">Features</a>
-        <a href="#signup" class="btn-join">Join Now</a>
-    </div>
-</nav>
-
-<section class="hero" id="about">
-    <h1>ልማት Hub</h1>
-    <p style="font-size: 1.4rem; color: #555;">Empowering Ethiopia's Students for a Global Future.</p>
-    <a href="#signup" class="btn-start">Start Learning Now</a>
-</section>
-
-<section class="features" id="features">
-    <div class="card"><h3>AI Learning</h3><p>Personalized paths that evolve with your progress.</p></div>
-    <div class="card"><h3>Fayda ID</h3><p>Secure, verified credentials for the global market.</p></div>
-    <div class="card"><h3>Global Jobs</h3><p>Bridge the gap between your skills and remote careers.</p></div>
-</section>
-
-<section class="testimonials">
-    <div class="testimonial-grid">
-        <div class="t-card"><p>"The best platform for learning digital skills in Amharic!"</p><strong>- Selamawit K.</strong></div>
-        <div class="t-card"><p>"I love the Fayda ID integration. Official and valuable."</p><strong>- Dawit M.</strong></div>
-    </div>
-</section>
-
-<section class="signup-section" id="signup">
-    <div class="form-container">
-        <h2>Join the Digital Revolution</h2>
-        <p>Enter your details to get early access to AI learning paths.</p>
-        <input type="text" placeholder="Full Name" class="signup-input">
-        <input type="email" placeholder="Email Address" class="signup-input">
-        <button class="signup-btn" onclick="alert('Success! Your application has been submitted.')">Submit Application</button>
-    </div>
-</section>
-
 <footer>
     <div class="social-links">
-        <a href="https://linkedin.com/in/YOUR_PROFILE" target="_blank">LinkedIn</a>
-        <a href="https://twitter.com/YOUR_PROFILE" target="_blank">Twitter</a>
-        <a href="https://facebook.com/YOUR_PROFILE" target="_blank">Facebook</a>
+        <a href="https://linkedin.com/in/yourname" target="_blank">LinkedIn</a>
+        <a href="https://twitter.com/yourname" target="_blank">Twitter</a>
+        <a href="https://facebook.com/yourname" target="_blank">Facebook</a>
     </div>
-    <p style="margin-top: 20px;">&copy; 2026 ልማት Hub Ethiopia. All Rights Reserved.</p>
+    <p>&copy; 2026 ልማት Hub Ethiopia. All Rights Reserved.</p>
+</footer>
