--- a/index.html
+++ b/index.html
@@ -1,8 +1,59 @@
-<footer>
-    <div class="social-links">
-        <a href="https://linkedin.com/in/yourname" target="_blank">LinkedIn</a>
-        <a href="https://twitter.com/yourname" target="_blank">Twitter</a>
-        <a href="https://facebook.com/yourname" target="_blank">Facebook</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ልማት Hub | Ethiopia 2026</title>
+    <style>
+        * { scroll-behavior: smooth; box-sizing: border-box; }
+        body { margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; background: #f8f9fa; color: #333; line-height: 1.6; }
+        nav { background: white; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
+        .logo { font-weight: bold; font-size: 1.5rem; color: #003973; text-decoration: none; }
+        .nav-links a { text-decoration: none; color: #333; margin-left: 20px; font-weight: 500; }
+        .btn-join { background: #2E7D32; color: white !important; padding: 8px 20px; border-radius: 5px; font-weight: bold; }
+        
+        .hero { padding: 60px 5%; background: white; }
+        .hero h1 { font-size: 3.5rem; color: #003973; margin-bottom: 5px; }
+        .btn-start { background: #2E7D32; color: white; padding: 12px 25px; border-radius: 5px; text-decoration: none; font-weight: bold; display: inline-block; margin-top: 20px; }
+
+        .skills-section { padding: 60px 5%; background: white; text-align: center; }
+        .skills-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-top: 30px; }
+        .skill-box { border: 1px solid #eee; padding: 20px; border-radius: 10px; transition: 0.3s; }
+        .skill-box:hover { border-color: #2E7D32; box-shadow: 0 5px 15px rgba(0,0,0,0.05); }
+        .skill-box h4 { margin: 10px 0; color: #003973; }
+
+        .features { display: flex; justify-content: space-around; padding: 60px 5%; flex-wrap: wrap; background: #f1f1f1; }
+        .card { background: white; padding: 30px; border-radius: 10px; width: 280px; margin: 15px; text-align: center; box-shadow: 0 4px 6px rgba(0,0,0,0.05); }
+
+        .signup-section { padding: 80px 5%; background: #003973; color: white; text-align: center; }
+        .form-container { max-width: 500px; margin: 0 auto; border: 2px solid #FFD700; padding: 40px; border-radius: 15px; }
+        .signup-input { padding: 15px; width: 100%; border-radius: 5px; border: none; margin-bottom: 15px; font-size: 1rem; }
+        .signup-btn { width: 100%; padding: 15px; background: #FFD700; color: #003973; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; font-size: 1.1rem; }
+
+        footer { padding: 40px 5%; background: #222; color: white; text-align: center; }
+    </style>
+</head>
+<body>
+
+<nav>
+    <a href="#" class="logo">ልማት Hub</a>
+    <div class="nav-links">
+        <a href="#about">About</a>
+        <a href="#skills">Curriculum</a>
+        <a href="#signup" class="btn-join">Join Now</a>
     </div>
-    <p>&copy; 2026 ልማት Hub Ethiopia. All Rights Reserved.</p>
-</footer>
+</nav>
+
+<section class="hero" id="about">
+    <h1>ልማት Hub</h1>
+    <p style="font-size: 1.4rem; color: #555;">Empowering Ethiopia's Students for a Global Future.</p>
+    <a href="#signup" class="btn-start">Start Learning Now</a>
+</section>
+
+<section class="skills-section" id="skills">
+    <h2 style="color: #003973;">What You Will Master</h2>
+    <div class="skills-grid">
+        <div class="skill-box"><h4>Python AI</h4><p>Master the language of the future.</p></div>
+        <div class="skill-box"><h4>Data Analysis</h4><p>Turn information into power.</p></div>
+        <div class="skill-box"><h4>Remote Work</h4><p>How to land global USD contracts.</p></div>
+        <div class="skill-box"><h4>Cloud Computing</h4><p>Scaling Ethiopia's tech stack
