Revamp pricing section and remove skills section
Removed skills section and added pricing section with options.

--- a/index.html
+++ b/index.html
@@ -14,16 +14,13 @@
         
         .hero { padding: 60px 5%; background: white; }
         .hero h1 { font-size: 3.5rem; color: #003973; margin-bottom: 5px; }
-        .btn-start { background: #2E7D32; color: white; padding: 12px 25px; border-radius: 5px; text-decoration: none; font-weight: bold; display: inline-block; margin-top: 20px; }
 
-        .skills-section { padding: 60px 5%; background: white; text-align: center; }
-        .skills-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-top: 30px; }
-        .skill-box { border: 1px solid #eee; padding: 20px; border-radius: 10px; transition: 0.3s; }
-        .skill-box:hover { border-color: #2E7D32; box-shadow: 0 5px 15px rgba(0,0,0,0.05); }
-        .skill-box h4 { margin: 10px 0; color: #003973; }
-
-        .features { display: flex; justify-content: space-around; padding: 60px 5%; flex-wrap: wrap; background: #f1f1f1; }
-        .card { background: white; padding: 30px; border-radius: 10px; width: 280px; margin: 15px; text-align: center; box-shadow: 0 4px 6px rgba(0,0,0,0.05); }
+        .pricing-section { padding: 60px 5%; background: #f1f1f1; text-align: center; }
+        .pricing-grid { display: flex; justify-content: center; gap: 20px; flex-wrap: wrap; margin-top: 30px; }
+        .price-box { background: white; padding: 40px; border-radius: 15px; width: 300px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); border: 2px solid transparent; }
+        .price-box.featured { border-color: #FFD700; transform: scale(1.05); }
+        .price-box h3 { color: #003973; font-size: 1.8rem; }
+        .price { font-size: 2.5rem; font-weight: bold; margin: 20px 0; color: #2E7D32; }
 
         .signup-section { padding: 80px 5%; background: #003973; color: white; text-align: center; }
         .form-container { max-width: 500px; margin: 0 auto; border: 2px solid #FFD700; padding: 40px; border-radius: 15px; }
@@ -39,21 +36,49 @@
     <a href="#" class="logo">ልማት Hub</a>
     <div class="nav-links">
         <a href="#about">About</a>
-        <a href="#skills">Curriculum</a>
+        <a href="#pricing">Pricing</a>
         <a href="#signup" class="btn-join">Join Now</a>
     </div>
 </nav>
 
 <section class="hero" id="about">
     <h1>ልማት Hub</h1>
-    <p style="font-size: 1.4rem; color: #555;">Empowering Ethiopia's Students for a Global Future.</p>
-    <a href="#signup" class="btn-start">Start Learning Now</a>
+    <p style="font-size: 1.4rem; color: #555;">The #1 Digital Skills Platform in Ethiopia.</p>
 </section>
 
-<section class="skills-section" id="skills">
-    <h2 style="color: #003973;">What You Will Master</h2>
-    <div class="skills-grid">
-        <div class="skill-box"><h4>Python AI</h4><p>Master the language of the future.</p></div>
-        <div class="skill-box"><h4>Data Analysis</h4><p>Turn information into power.</p></div>
-        <div class="skill-box"><h4>Remote Work</h4><p>How to land global USD contracts.</p></div>
-        <div class="skill-box"><h4>Cloud Computing</h4><p>Scaling Ethiopia's tech stack
+<section class="pricing-section" id="pricing">
+    <h2 style="color: #003973;">Choose Your Path</h2>
+    <div class="pricing-grid">
+        <div class="price-box">
+            <h3>Community</h3>
+            <div class="price">Free</div>
+            <p>✓ Basic AI Introduction</p>
+            <p>✓ Community Forum Access</p>
+            <p>✓ Weekly Newsletters</p>
+        </div>
+        <div class="price-box featured">
+            <h3>Pro 2026</h3>
+            <div class="price">Limited</div>
+            <p>✓ Full Python Mastery</p>
+            <p>✓ Verified Fayda ID Badge</p>
+            <p>✓ Global Job Placement</p>
+        </div>
+    </div>
+</section>
+
+<section class="signup-section" id="signup">
+    <div class="form-container">
+        <h2>Join the Digital Revolution</h2>
+        <p>Apply now for the next cohort.</p>
+        <input type="text" placeholder="Full Name" class="signup-input">
+        <input type="email" placeholder="Email Address" class="signup-input">
+        <button class="signup-btn" onclick="alert('Your spot is reserved!')">Secure My Spot</button>
+    </div>
+</section>
+
+<footer>
+    <p>&copy; 2026 ልማት Hub Ethiopia. Building the future.</p>
+</footer>
+
+</body>
+</html>
