Add signup button and footer to index.html

--- a/index.html
+++ b/index.html
@@ -60,3 +60,13 @@
         <h2>Join the Digital Revolution</h2>
         <input type="text" placeholder="Full Name" class="signup-input">
         <input type="email" placeholder="Email Address" class="signup-input">
+        <button class="signup-btn" onclick="alert('Welcome to the team!')">Submit Application</button>
+    </div>
+</section>
+
+<footer>
+    <p>&copy; 2026 Lemat Hub. Building Ethiopia's Digital Future Together.</p>
+</footer>
+
+</body>
+</html>
