Insert founder image in the founder section
Added an image of the founder to the founder section.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h2 style="color: #003973; font-size: 2.5rem;">A Message from the Founder</h2>
         <p style="font-size: 1.2rem; font-style: italic;">"Our goal is to ensure that no Ethiopian student is left behind in the AI revolution. We are building the bridge between local talent and global opportunities."</p>
         <p>Launched in 2026, ልማት Hub is committed to training the next 1 million Ethiopian developers.</p>
-    </div>
+    <img src="https://via.placeholder.com/300" alt="Founder" class="founder-img">
 </section>
 
 <section class="signup-section" id="signup">
